stop zoom on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 
 body {
+    touch-action: none;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
